// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Table /> > renders as expected based on provided props 1`] = `
<div>
  <table
    class="w-full"
  >
    <thead
      class=""
    >
      <tr
        class="group"
      >
        <th
          class="border-lm-border dark:border-dm-border p-2 border-b-1 text-left"
        >
          Foo
        </th>
        <th
          class="border-lm-border dark:border-dm-border p-2 border-b-1 text-left"
        >
          Bar
        </th>
        <th
          class="border-lm-border dark:border-dm-border p-2 border-b-1 text-left"
        >
          Baz
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class="group hover:bg-lm-primary dark:hover:bg-dm-primary group-[&]/card:hover:bg-lm-secondary dark:group-[&]/card:hover:bg-dm-secondary"
      >
        <td
          class="border-lm-border dark:border-dm-border p-2 border-b-1"
        >
          Foo
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 border-b-1"
        >
          Bar
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 border-b-1"
        >
          Baz
        </td>
      </tr>
      <tr
        class="group hover:bg-lm-primary dark:hover:bg-dm-primary group-[&]/card:hover:bg-lm-secondary dark:group-[&]/card:hover:bg-dm-secondary"
      >
        <td
          class="border-lm-border dark:border-dm-border p-2 border-b-1"
        >
          Foo
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 border-b-1"
        >
          Bar
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 border-b-1"
        >
          Baz
        </td>
      </tr>
      <tr
        class="group hover:bg-lm-primary dark:hover:bg-dm-primary group-[&]/card:hover:bg-lm-secondary dark:group-[&]/card:hover:bg-dm-secondary"
      >
        <td
          class="border-lm-border dark:border-dm-border p-2 border-b-1"
        >
          Foo
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 border-b-1"
        >
          Bar
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 border-b-1"
        >
          Baz
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> > renders as expected based on provided props 2`] = `
<div>
  <table
    class="w-full"
  >
    <thead
      class="hidden lg:table-header-group"
    >
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border"
      >
        <th
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 text-left"
        >
          Foo
        </th>
        <th
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 text-left"
        >
          Bar
        </th>
        <th
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 text-left"
        >
          Baz
        </th>
      </tr>
    </thead>
    <tbody
      class="lg:table-row-group flex flex-col gap-y-3"
    >
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border hover:bg-lm-primary dark:hover:bg-dm-primary group-[&]/card:hover:bg-lm-secondary dark:group-[&]/card:hover:bg-dm-secondary"
      >
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Foo"
        >
          Foo
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Bar"
        >
          Bar
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Baz"
        >
          Baz
        </td>
      </tr>
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border hover:bg-lm-primary dark:hover:bg-dm-primary group-[&]/card:hover:bg-lm-secondary dark:group-[&]/card:hover:bg-dm-secondary"
      >
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Foo"
        >
          Foo
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Bar"
        >
          Bar
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Baz"
        >
          Baz
        </td>
      </tr>
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border hover:bg-lm-primary dark:hover:bg-dm-primary group-[&]/card:hover:bg-lm-secondary dark:group-[&]/card:hover:bg-dm-secondary"
      >
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
        >
          Foo
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
        >
          Bar
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
        >
          Baz
        </td>
      </tr>
    </tbody>
    <tfoot
      class="lg:table-row-group flex flex-col gap-y-3 mt-4"
    >
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border"
      >
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
        >
          Foo footer
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
        >
          Bar footer
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
        >
          Baz footer
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`<Table /> > renders as expected based on provided props 3`] = `
<div>
  <table
    class="w-full"
  >
    <thead
      class="hidden lg:table-header-group"
    >
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border"
      >
        <th
          class="border-lm-border dark:border-dm-border p-1 block lg:table-cell not-last:border-b-1 lg:border-b-1 text-left"
        >
          Foo
        </th>
        <th
          class="border-lm-border dark:border-dm-border p-1 block lg:table-cell not-last:border-b-1 lg:border-b-1 text-left"
        >
          Bar
        </th>
        <th
          class="border-lm-border dark:border-dm-border p-1 block lg:table-cell not-last:border-b-1 lg:border-b-1 text-left"
        >
          Baz
        </th>
      </tr>
    </thead>
    <tbody
      class="lg:table-row-group flex flex-col gap-y-3"
    >
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border hover:bg-lm-primary dark:hover:bg-dm-primary group-[&]/card:hover:bg-lm-secondary dark:group-[&]/card:hover:bg-dm-secondary"
      >
        <td
          class="border-lm-border dark:border-dm-border p-1 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Foo"
        >
          Foo
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-1 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Bar"
        >
          Bar
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-1 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Baz"
        >
          Baz
        </td>
      </tr>
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border hover:bg-lm-primary dark:hover:bg-dm-primary group-[&]/card:hover:bg-lm-secondary dark:group-[&]/card:hover:bg-dm-secondary"
      >
        <td
          class="border-lm-border dark:border-dm-border p-1 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Foo"
        >
          Foo
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-1 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Bar"
        >
          Bar
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-1 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Baz"
        >
          Baz
        </td>
      </tr>
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border hover:bg-lm-primary dark:hover:bg-dm-primary group-[&]/card:hover:bg-lm-secondary dark:group-[&]/card:hover:bg-dm-secondary"
      >
        <td
          class="border-lm-border dark:border-dm-border p-1 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
        >
          Foo
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-1 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
        >
          Bar
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-1 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
        >
          Baz
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> > renders as expected based on provided props 4`] = `
<div>
  <table
    class="w-full"
  >
    <thead
      class="hidden lg:table-header-group"
    >
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border"
      >
        <th
          class="border-lm-border dark:border-dm-border p-3 block lg:table-cell not-last:border-b-1 lg:border-b-1 text-left"
        >
          Foo
        </th>
        <th
          class="border-lm-border dark:border-dm-border p-3 block lg:table-cell not-last:border-b-1 lg:border-b-1 text-left"
        >
          Bar
        </th>
        <th
          class="border-lm-border dark:border-dm-border p-3 block lg:table-cell not-last:border-b-1 lg:border-b-1 text-left"
        >
          Baz
        </th>
      </tr>
    </thead>
    <tbody
      class="lg:table-row-group flex flex-col gap-y-3"
    >
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border hover:bg-lm-primary dark:hover:bg-dm-primary group-[&]/card:hover:bg-lm-secondary dark:group-[&]/card:hover:bg-dm-secondary"
      >
        <td
          class="border-lm-border dark:border-dm-border p-3 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Foo"
        >
          Foo
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-3 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Bar"
        >
          Bar
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-3 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Baz"
        >
          Baz
        </td>
      </tr>
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border hover:bg-lm-primary dark:hover:bg-dm-primary group-[&]/card:hover:bg-lm-secondary dark:group-[&]/card:hover:bg-dm-secondary"
      >
        <td
          class="border-lm-border dark:border-dm-border p-3 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Foo"
        >
          Foo
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-3 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Bar"
        >
          Bar
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-3 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Baz"
        >
          Baz
        </td>
      </tr>
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border hover:bg-lm-primary dark:hover:bg-dm-primary group-[&]/card:hover:bg-lm-secondary dark:group-[&]/card:hover:bg-dm-secondary"
      >
        <td
          class="border-lm-border dark:border-dm-border p-3 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
        >
          Foo
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-3 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
        >
          Bar
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-3 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
        >
          Baz
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
